// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match the snapshot 1`] = `
<Grid__StyledGridWrapper
  gridGap="10px"
  padding="10px"
>
  <GridCol__StyledGridCol
    colXS={6}
  >
    <Heading
      component="h4"
    />
  </GridCol__StyledGridCol>
  <GridCol__StyledGridCol
    center={true}
    colXS={6}
  >
    <Checkbox__StyledContainer>
      <Checkbox__StyledInput
        type="checkbox"
      />
      <Checkbox__StyledSpan />
    </Checkbox__StyledContainer>
  </GridCol__StyledGridCol>
</Grid__StyledGridWrapper>
`;

exports[`Checkbox should match the snapshot when checked 1`] = `
<Grid__StyledGridWrapper
  gridGap="10px"
  padding="10px"
>
  <GridCol__StyledGridCol
    colXS={6}
  >
    <Heading
      component="h4"
    />
  </GridCol__StyledGridCol>
  <GridCol__StyledGridCol
    center={true}
    colXS={6}
  >
    <Checkbox__StyledContainer>
      <Checkbox__StyledInput
        checked={true}
        type="checkbox"
      />
      <Checkbox__StyledSpan />
    </Checkbox__StyledContainer>
  </GridCol__StyledGridCol>
</Grid__StyledGridWrapper>
`;

exports[`Checkbox should match the snapshot with label 1`] = `
<Grid__StyledGridWrapper
  gridGap="10px"
  padding="10px"
>
  <GridCol__StyledGridCol
    colXS={6}
  >
    <Heading
      component="h4"
      label="Mock"
    />
  </GridCol__StyledGridCol>
  <GridCol__StyledGridCol
    center={true}
    colXS={6}
  >
    <Checkbox__StyledContainer>
      <Checkbox__StyledInput
        type="checkbox"
      />
      <Checkbox__StyledSpan />
    </Checkbox__StyledContainer>
  </GridCol__StyledGridCol>
</Grid__StyledGridWrapper>
`;
